fixed the spacing on the Artifacts Library page

--- a/packages/app/public/styles/page.css
+++ b/packages/app/public/styles/page.css
@@ -271,35 +271,3 @@ input:checked + .toggle-switch-slider::before {
   font-style: var(--main-font-type);
   font-size: var(--p-font-size);
 }
-
-
-
-
-
-/* MUSIC LIBRARY ITEM TEMPLATE */
-.playlist-bio {
-  margin: var(--margin-for-body);
-}
-
-.playlist-heading {
-  background-color: var(--color-main-background);
-  padding: var(--padding-insider);
-  border-radius: var(--border-radius-content);
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-
-.playlist-heading h1 {
-  color: var(--color-main-support);
-  font-family: var(--main-font-family);
-  font-weight: var(--main-font-weight);
-  font-style: var(--main-font-type);
-  font-size: var(--h1-font-size);
-}
-
-.playlist-heading h2 {
-  color: var(--color-main-support);
-  font-family: var(--main-font-family);
-  font-weight: var(--main-font-weight);
-  font-style: var(--main-font-type);
-  font-size: var(--h2-font-size);
-}
